# fragment_playground

./: CMakeLists.txt  gradient.glsl  gradient2.glsl  init.cpp  init.hpp  main.cpp  render.cpp  render.hpp  shaders.cpp  shaders.hpp  spheres.glsl
examples/: flag.glsl  gradient.glsl  spheres.glsl
